fix text not fitting on mobile

--- a/styles.css
+++ b/styles.css
@@ -250,5 +250,6 @@ footer {
     .dropdown-content li {
         margin: 0.5rem 0;
         letter-spacing: 0.5rem;
+        padding-right: 0.5rem;
     }
 }
